# e2e_Playwright

./: .env.example  .gitignore  COMMANDS.md  README.md  TESTCASES.md  env_dev.bat  env_dev.ps1  generate_allure_report.py  interview.md  node.md  pyproject.toml  pytest.bat  requirements.txt  run_allure.bat  run_e2e.py  run_tests.bat
api/: __init__.py
api/client/: __init__.py  admin_client.py  auth_client.py  base_client.py  cart_client.py  coupon_client.py  order_client.py  product_client.py
config/: __init__.py  settings.py
scripts/: annotate_missing_comments.py  tigshop_logged_in.json  tigshop_selectors.json
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_admin_api.py  test_auth_api.py  test_cart_order_api.py  test_coupon_api.py  test_home_product_api.py  test_order_api.py  test_product_api.py
tests/e2e/: __init__.py  test_exception_e2e.py  test_front_purchase_e2e.py  test_full_purchase_flow.py
tests/ui/: __init__.py  test_admin_ui.py  test_exception_ui.py  test_front_home_ui.py  test_front_member_ui.py  test_front_shop_ui.py  test_search_ui.py
ui/: __init__.py
ui/driver/: __init__.py  driver_manager.py
ui/pages/: __init__.py  base_page.py  cart_page.py  home_page.py  login_page.py  order_page.py  product_page.py  search_page.py
ui/pages/admin/: __init__.py  coupon_page.py  login_page.py
ui/pages/front/: __init__.py  cart_page.py  checkout_page.py  coupon_page.py  home_page.py  login_page.py  member_page.py  product_page.py
utils/: __init__.py  allure_helper.py  popup_handler.py  session_sync.py  ui_auth.py  wait_helper.py
